--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,6 +6,7 @@
 @import 'libs/skel';
 @import 'font-awesome.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic');
+@import 'monokai.css';
 
 /*
 	Forty by HTML5 UP
