Update page for personal use

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>About Us</h2>
+                    <h2>About Joshua</h2>
                 </header>
                 <p>{{ content }}</p>
                 <!--
