--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@
 
 <body>
 
-    {% include header.html %} 
-    
-    
+    {% include header.html %}
+
+
 <!-- Main -->
 <div id="main" class="alt">
 
@@ -21,8 +21,9 @@
 	<div class="inner">
 		<header class="major">
 			<h1>{{ page.title }}</h1>
+      <p>{{ page.description }}</p>
 		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
+		<!-- {% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %} -->
 		<p>{{ content }}</p>
 	</div>
 </section>
