--- a/_sass/components/_icon.scss
+++ b/_sass/components/_icon.scss
@@ -17,7 +17,7 @@
 
 		&.alt {
 			&:before {
-				background-color: _palette(fg-bold);
+				background-color: _palette(fg-social);
 				border-radius: 100%;
 				color: _palette(bg);
 				display: inline-block;
