--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -34,6 +34,7 @@
 		bg-alt:				#2a2f4a,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
+		fg-social:    #00FF74,
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
