Polish up with resume

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
 		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 		    {% endif %}
 		{% endfor %}
+		<li><a href="{{ "assets/files/resume.pdf" | absolute_url }}" target="_blank">Resume</a></li>
 	</ul>
 	<!--
 	<ul class="actions vertical">
