--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,9 @@
 <section id="contact">
 	<div class="inner">
 		<section>
+			<p>
+				Have a question or need help with your next GIS project?
+			</p>
 			<form action="https://formspree.io/{{ site.email }}" method="POST">
 				<div class="field half first">
 					<label for="name">Name</label>
@@ -39,6 +42,17 @@
 						<li><a href="{{ site.twitter_url }}" target="_blank">Twitter</a></li>
 						<li><a href="{{ site.linkedin_url }}" target="_blank">LinkedIn</a></li>
 						<li><a href="{{ site.github_url }}" target="_blank">Github</a></li>
+					</ul>
+					</span>
+				</div>
+			</section>
+			<section>
+				<div class="contact-method">
+					<span class="icon alt fa-link"></span>
+					<h3>Portfolio</h3>
+					<span>
+					<ul>
+						<li><a href="https://www.mapperkeeper.com" target="_blank">MapperKeeper</a> - Founder and Developer</li>
 					</ul>
 					</span>
 				</div>
