--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -20,12 +20,14 @@
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', Helvetica, sans-serif),
+		family:				('-apple-system', BlinkMacSystemFont, Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif),
 		family-fixed:		('Courier New', monospace),
 		weight:				300,
 		weight-bold:		600,
 		letter-spacing:		0.025em,
-		letter-spacing-alt:	0.25em
+		letter-spacing-alt:	0.25em,
+		line-height:        1.6,
+
 	);
 
 // Palette.
